css for stopping images from overlapping text in a 2 column

--- a/wp-content/themes/whospeaksforme/assets/sass/04-elements/acf.scss
+++ b/wp-content/themes/whospeaksforme/assets/sass/04-elements/acf.scss
@@ -345,6 +345,7 @@ section.acf-free_form_content{
 		p{
 			position: relative;
 			width: 100%;
+			overflow: hidden;
 		}
 		@include media(desktop-only){
 			width: 84% !important;
